--- a/index.html
+++ b/index.html
@@ -30,63 +30,63 @@
     </header>
     <div class="container bg-light">
       <div class="row" id="7am">
-        <p class="col-1 align-self-center">7:00 AM</p>
-        <p class="col">Event</p>
+        <p class="col-1" id="time">7:00 AM</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="8am">
         <p class="col-1">8:00 AM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="9am">
         <p class="col-1">9:00 AM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="10am">
         <p class="col-1">10:00 AM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="11am">
         <p class="col-1">11:00 AM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="12pm">
         <p class="col-1">12:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="1pm">
         <p class="col-1">1:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="2pm">
         <p class="col-1">2:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="3pm">
         <p class="col-1">3:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="4pm">
         <p class="col-1">4:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="5pm">
         <p class="col-1">5:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
       <div class="row" id="6pm">
         <p class="col-1">6:00 PM</p>
-        <p class="col">Event</p>
+        <p class="col" id="event">Event</p>
         <button class="col-1 btn-primary rounded">Save
       </div>
 
