--- a/index.html
+++ b/index.html
@@ -28,66 +28,66 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container bg-light">
-      <div class="row" id="7am">
+    <div class="container bg-light" id="container">
+      <div class="row" id="seven">
         <p class="col-1" id="time">7:00 AM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event event-7 seven" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="8am">
+      <div class="row" id="eight">
         <p class="col-1">8:00 AM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event event-8" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="9am">
+      <div class="row" id="nine">
         <p class="col-1">9:00 AM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event event-9" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="10am">
+      <div class="row" id="ten">
         <p class="col-1">10:00 AM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="11am">
+      <div class="row" id="eleven">
         <p class="col-1">11:00 AM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="12pm">
+      <div class="row" id="twelve">
         <p class="col-1">12:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="1pm">
+      <div class="row" id="one">
         <p class="col-1">1:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="2pm">
+      <div class="row" id="two">
         <p class="col-1">2:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="3pm">
+      <div class="row" id="three">
         <p class="col-1">3:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="4pm">
+      <div class="row" id="four">
         <p class="col-1">4:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="5pm">
+      <div class="row" id="five">
         <p class="col-1">5:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
-      <div class="row" id="6pm">
+      <div class="row" id="six">
         <p class="col-1">6:00 PM</p>
-        <p class="col" id="event">Event</p>
-        <button class="col-1 btn-primary rounded">Save
+        <p class="col event" id="event"></p>
+        <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
 
       <!-- Timeblocks go here -->
