--- a/index.html
+++ b/index.html
@@ -30,62 +30,62 @@
     </header>
     <div class="container bg-light" id="container">
       <div class="row" id="seven">
-        <p class="col-1" id="time">7:00 AM</p>
+        <p class="col-1 7" id="time">7 AM</p>
         <p class="col event event-7 seven" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="eight">
-        <p class="col-1">8:00 AM</p>
+        <p class="col-1">8 AM</p>
         <p class="col event event-8" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="nine">
-        <p class="col-1">9:00 AM</p>
+        <p class="col-1">9 AM</p>
         <p class="col event event-9" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="ten">
-        <p class="col-1">10:00 AM</p>
+        <p class="col-1">10 AM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="eleven">
-        <p class="col-1">11:00 AM</p>
+        <p class="col-1">11 AM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="twelve">
-        <p class="col-1">12:00 PM</p>
+        <p class="col-1">12 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="one">
-        <p class="col-1">1:00 PM</p>
+        <p class="col-1">1 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="two">
-        <p class="col-1">2:00 PM</p>
+        <p class="col-1">2 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="three">
-        <p class="col-1">3:00 PM</p>
+        <p class="col-1">3 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="four">
-        <p class="col-1">4:00 PM</p>
+        <p class="col-1">4 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="five">
-        <p class="col-1">5:00 PM</p>
+        <p class="col-1">5 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
       <div class="row" id="six">
-        <p class="col-1">6:00 PM</p>
+        <p class="col-1">6 PM</p>
         <p class="col event" id="event"></p>
         <button class="col-1 btn-primary rounded" id="save-button">Save
       </div>
